--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.13.6",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.4.5",
     "@types/react": "18.2.16",
@@ -21,9 +22,11 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
+    "three": "^0.155.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/three": "^0.155.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3"
